# AndroidCameraYUVRender

./: README.md  local.properties
app/src/main/java/com/example/android/camera2/basic/: CameraActivity.kt
app/src/main/java/com/example/android/camera2/basic/fragments/: CameraFragment.kt  MultiScreenFragment.kt  SelectorFragment.kt  YUVRenderFragment.kt
app/src/main/res/layout/: fragment_camera.xml  fragment_multi_screen.xml  fragment_yuv.xml
app/src/main/res/navigation/: nav_graph.xml
gradle/wrapper/: gradle-wrapper.properties
utils/: CMakeLists.txt  build.gradle
utils/src/main/cpp/yuvutil/: CMakeLists.txt  yuv_util.cpp
utils/src/main/java/com/example/android/camera/utils/: AspectFrameLayout.kt  CameraGLSurfaceView.kt  CameraSizes.kt  CameraSurfaceView.kt  CameraTextureView.kt  EGLUtil.kt  Gl2Utils.java  MatrixUtils.java  YuvUtil.java
utils/src/main/java/com/example/android/camera/utils/gles/: Drawable2d.java  EglCore.java  EglSurfaceBase.java  FlatShadedProgram.java  FullFrameRect.java  GeneratedTexture.java  GlUtil.java  OffscreenSurface.java  Sprite2d.java  Texture2dProgram.java  WindowSurface.java
utils/src/main/java/com/example/android/camera/utils/renderer/: BaseRenderer.kt  FilterGLRenderer.kt  GLRenderer.kt  MultiScreenRenderer.kt  OesRenderer.kt  YUVRenderer.kt
utils/src/main/res/raw/: i420_to_rgb_fragtment_shader.glsl  longexposure_fragtment_shader.glsl  multi_screen_filter_fragtment_shader.glsl  multi_screen_fragtment_shader.glsl  nv21_to_rgb_fragtment_shader.glsl  oes_fragtment_shader.glsl  oes_texture_vertex_shader.glsl  screen_fragtment_shader.glsl  texture_vertex_shader.glsl  yuv_to_rgb_fragtment_shader.glsl
